--- a/src/main/resources/herb.html
+++ b/src/main/resources/herb.html
@@ -53,7 +53,12 @@
 				</a>
 			</div>
 		</div>
-		<!--<div class="drug_classify">
+
+
+
+
+		<!--药物分类xxxx-->
+		<div class="drug_classify">
 			<div class="classify_top">
 				<div class="tit">
 					药品分类
@@ -154,7 +159,7 @@
 		<a href="" class="mulu">
 			目录
 		</a>
-	</div>-->
+	</div>
 	<script src="static/js/jquery.js" type="text/javascript"></script>
 	<script>
 		$(document).ready(function () {
